Refactor to Java 17